# NN_image

./: README.md  Revision.md
CNN_activation/: .cproject  .project
CNN_activation/log/: 7(3)_3(5)  condition37.csv  kernel.csv  kernel3.csv  kernel4.csv  weights37.txt
CNN_activation/src/: CNN_circle (copy).cpp  CNN_circle.cpp
CNN_activation/src/modules/: dataReader.cpp  matrix_maths.cpp  matrix_maths.h  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkTrainer.cpp
Conv_Training/src/: convolution.cc  cost_gradient.cc  cost_gradient.h  general_settings.h  read_data.cc  result_predict.cc  result_predict.h  save_weights.cc  train_network.cc
Conv_Training/visualization/: conv_visualization .py  kernel_visualization.py
Test/: .compile.sh.swp  .cproject  CMakeLists.txt  CMakeLists.txt~  RT_NN  main_gray.cpp
Test/log/: log.csv  maxmin.csv  maxmin0.csv  norm_test.csv  norm_train.csv  test_result.csv  weights.txt  weights_gray.txt  weights_hsv.txt
Test/src/: CNN_circle.cpp  main.cpp  main_gray.cpp  main_hsv.cpp  modules
Test/src/modules/: DisplayManyImages.cpp  dataReader.cpp  dataReader.h  (+2 more)
Training/: .cproject  .project  CMakeLists.txt  RT_NN  data.cpp  data2csv.cpp  kernel.csv  training.sh
Training/image_data/: imgdata.csv  imgdata_gray.csv  imgdata_hsv.csv
Training/log/: condition0.csv  condition9.csv  log9.csv  maxmin.csv  weights9.txt
Training/src/: .cproject  main_training.cpp
Training/src/modules/: DisplayManyImages.h  dataReader.cpp  dataReader.h  matrix_maths.h  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkTrainer.cpp  neuralNetworkTrainer.h
